--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ init-system-helpers (1.28) UNRELEASED; urgency=medium
     only if they were already running (i. e. started manually by the admin).
     (Closes: #768450)
 
+  [ Andreas Henriksson ]
+  * Add support for -X option. (Closes: #760168)
+
  -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:38:28 +0100
 
 init-system-helpers (1.27) unstable; urgency=high
@@ -13,6 +16,7 @@ init-system-helpers (1.27) unstable; urgency=high
   Urgency high to not further delay the sysvinit migration to testing, and to
   avoid this going into testing with breaking file-rc.
 
+  [ Martin Pitt ]
   * Add debian/clean to remove script/*1.p. (Closes: #812586)
   * Version the conflict to file-rc, 0.8.17 now works fine with the moved
     update-rc.d and invoke-rc.d.
