--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 init-system-helpers (1.25) UNRELEASED; urgency=medium
 
+  [ Andreas Henriksson ]
   * Import invoke-rc.d + update-rc.d from sysvinit 2.88dsf-59.2
   * Import service from sysvinit 2.88dsf-59.2
   * Move service files into non-specific subdirectory
@@ -8,6 +9,9 @@ init-system-helpers (1.25) UNRELEASED; urgency=medium
   * update-rc.d: drop old fallback path for insserv
   * update-rc.d: only use insserv if available
   * Raise init-system-helpers Priority to required
+
+  [ Martin Pitt ]
+  * Update i-s-h package description to describe the newly moved tools.
 
  -- Andreas Henriksson <andreas@fatal.se>  Wed, 18 Nov 2015 18:43:47 +0100
 
