--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+init-system-helpers (1.26) UNRELEASED; urgency=medium
+
+  * Drop upstart as an alternative init dependency, as the package got
+    removed.
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 18 Jan 2016 15:32:29 +0100
+
 init-system-helpers (1.25) unstable; urgency=medium
 
   [ Andreas Henriksson ]
