--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,13 @@ init-system-helpers (1.29) UNRELEASED; urgency=medium
   [ Michael Biebl ]
   * Bump debhelper compatibility level to 9.
 
+  [ Raphael Geissert ]
+  * invoke-rc.d: Fix behaviour when no start or stop symlink is found.
+    Although update-rc.d(8) says that it is a common administration error to
+    delete a start symlink instead of renaming it to make it a stop symlink,
+    the default behaviour of invoke-rc.d in that case is not sensible, and
+    leads to the init script being executed. (Closes: #546532)
+
  -- Martin Pitt <mpitt@debian.org>  Fri, 05 Feb 2016 12:41:40 +0100
 
 init-system-helpers (1.28) unstable; urgency=medium
