--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+init-system-helpers (1.28) UNRELEASED; urgency=medium
+
+  * invoke-rc.d: Fix actions to run under systemd if there is no init.d
+    script. (Closes: #747851)
+
+ -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:38:28 +0100
+
 init-system-helpers (1.27) unstable; urgency=high
 
   Urgency high to not further delay the sysvinit migration to testing, and to
