--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-init-system-helpers (1.27) UNRELEASED; urgency=medium
+init-system-helpers (1.27) unstable; urgency=high
+
+  Urgency high to not further delay the sysvinit migration to testing, and to
+  avoid this going into testing with breaking file-rc.
 
   * Add debian/clean to remove script/*1.p. (Closes: #812586)
   * Version the conflict to file-rc, 0.8.17 now works fine with the moved
     update-rc.d and invoke-rc.d.
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 25 Jan 2016 22:40:49 +0100
+ -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:35:49 +0100
 
 init-system-helpers (1.26) unstable; urgency=medium
 
