--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ init-system-helpers (1.28) UNRELEASED; urgency=medium
   * invoke-rc.d: Allow stop and status requests for masked systemd services.
     (Closes: #717109)
 
+  [ Martin Pitt ]
+  * update-rc.d: Support /usr/lib/insserv/insserv location too, as with
+    newer sysvinit versions.
+
  -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:38:28 +0100
 
 init-system-helpers (1.27) unstable; urgency=high
