--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+init-system-helpers (1.29) UNRELEASED; urgency=medium
+
+  [ Michael Biebl ]
+  * Bump debhelper compatibility level to 9.
+
+ -- Martin Pitt <mpitt@debian.org>  Fri, 05 Feb 2016 12:41:40 +0100
+
 init-system-helpers (1.28) unstable; urgency=medium
 
   [ Martin Pitt ]
