--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-init-system-helpers (1.28) UNRELEASED; urgency=medium
+init-system-helpers (1.28) unstable; urgency=medium
 
   [ Martin Pitt ]
   * invoke-rc.d: Fix actions to run under systemd if there is no init.d
@@ -20,7 +20,7 @@ init-system-helpers (1.28) UNRELEASED; urgency=medium
   * invoke-rc.d: Allow stop and status requests for masked systemd services.
     (Closes: #717109)
 
- -- Martin Pitt <mpitt@debian.org>  Tue, 26 Jan 2016 11:38:28 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 05 Feb 2016 12:30:53 +0100
 
 init-system-helpers (1.27) unstable; urgency=high
 
