dh_systemd_*: Add DH promise to avoid being called for no reason
The commands have a well-defined set of constrains that define if they
will do anything.  Add a promise so dh knows if and when it may
optimise them out of the sequence.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ init-system-helpers (1.30) UNRELEASED; urgency=medium
   * dh_systemd_start: Default to -R in compat 10, for consistency with
     dh_installinit.
   * dh_systemd_*: Do not needlessly traverse the entire package tree.
+  * dh_systemd_*: Add DH promise to avoid being called for no reason.
 
  -- Felipe Sateler <fsateler@debian.org>  Fri, 11 Mar 2016 18:48:39 -0300
 
