Update Vcs-* fields to use https

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ init-system-helpers (1.30) UNRELEASED; urgency=medium
     dh_installinit.
   * dh_systemd_*: Do not needlessly traverse the entire package tree.
   * dh_systemd_*: Add DH promise to avoid being called for no reason.
+  * Update Vcs-* fields to use https.
 
  -- Felipe Sateler <fsateler@debian.org>  Fri, 11 Mar 2016 18:48:39 -0300
 
