update-rc.d: Add 'defaults' action to usage message. (Closes: #814666)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+init-system-helpers (1.30) UNRELEASED; urgency=medium
+
+  * update-rc.d: Add 'defaults' action to usage message. (Closes: #814666)
+
+ -- Felipe Sateler <fsateler@debian.org>  Fri, 11 Mar 2016 18:48:39 -0300
+
 init-system-helpers (1.29) unstable; urgency=medium
 
   [ Michael Biebl ]
