--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 init-system-helpers (1.30) UNRELEASED; urgency=medium
 
   * update-rc.d: Add 'defaults' action to usage message. (Closes: #814666)
+  * update-rc.d: Do not print 'error:' when passing --help
 
  -- Felipe Sateler <fsateler@debian.org>  Fri, 11 Mar 2016 18:48:39 -0300
 
