fuser: path fixes and command name length
Change some of the paths to use dynamically allocated memory, so no
limit, or use the PATH_MAX macro.

Command Name increases to 64 and try to use the COMM_LEN or the size
of the holding buffer consistently.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 Changes in 23.2
 ===============
+	* misc: Command names increased from 16 to 64 characters
 	* buildsys: signals.c depends on signames.h !16
 	* killall: look at all namespaces by default
 	* killall: Fix -INT option parsing #11
