--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,8 @@ init-system-helpers (1.51) unstable; urgency=high
 
   [ Felipe Sateler ]
   * Fix errors in pod2man invocations.
-    Catch errors when building pod manpages, and stop trying to build documentation for the debhelper tools
+    Catch errors when building pod manpages, and stop trying to build
+    documentation for the debhelper tools
   * Convert manpages into reStructuredText
   * update-rc.d: fix typo that was disabling all sysv scripts in defaults mode
     (Closes: #879771).
