--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+init-system-helpers (1.53) unstable; urgency=medium
+
+  * tests: only load Linux::Clone if not testing on real system
+    'use' directive is evaluated at compile time, so having it inside an 'if'
+    statement does not have the expected effect. Use the 'use if' directive instead.
+    This fixes running the autopkgtests in clean systems without Linux::Clone module
+
+ -- Felipe Sateler <fsateler@debian.org>  Wed, 15 Aug 2018 23:52:53 -0300
+
 init-system-helpers (1.52) unstable; urgency=medium
 
   [ Felipe Sateler ]
