docs: fix a typo in pstree.1

--- a/doc/pstree.1
+++ b/doc/pstree.1
@@ -15,7 +15,7 @@ pstree \- display a tree of processes
 .RB [ \-a  , \ \-\-arguments ]
 .RB [ \-c  , \ \-\-compact ]
 .RB [ \-h  , \ \-\-highlight\-all  , \ \-H \fIpid\fB  , \ \-\-highlight\-pid\ \fIpid\fB ]
-.RB [ \-g  ] \ \-\-show\-pgids ]
+.RB [ \-g  , \ \-\-show\-pgids ]
 .RB [ \-l  , \ \-\-long ]
 .RB [ \-n  , \ \-\-numeric\-sort ]
 .RB [ \-N  , \ \-\-ns\-sort \fIns\fB
