pstree: make the long version of option -c describe what it does
Having a long option that says the opposite of what it actually does
is awkward.  Choose to just extend its name to --compact-not, so that
scripts that use --compact will continue to work.

--- a/doc/pstree.1
+++ b/doc/pstree.1
@@ -13,7 +13,7 @@ pstree \- display a tree of processes
 .ad l
 .B pstree
 .RB [ \-a  , \ \-\-arguments ]
-.RB [ \-c  , \ \-\-compact ]
+.RB [ \-c  , \ \-\-compact\-not ]
 .RB [ \-g  , \ \-\-show\-pgids ]
 .RB [ \-h  , \ \-\-highlight\-all  , \ \-H \fIpid\fB  , \ \-\-highlight\-pid\ \fIpid\fB ]
 .RB [ \-l  , \ \-\-long ]
